Fixed z-index layering issue

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
   position: fixed;
   top: 0px;
   width: 100%;
+  z-index: +200;
 }
 
 .header-nav {
